# deep-learning-with-python

./: chapter02_mathematical-building-blocks.ipynb  chapter03_introduction_to_keras_and_tf.ipynb  pyproject.toml  tabular_modelling.ipynb
