[tool.poetry]
name = "deep-learning-with-python"
version = "0.1.0"
description = ""
authors = ["jthetzel <jthetzel@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_with_python"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
